<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_pantalla">
    <ScrollView
        android:id="@+id/scrollAsegurado"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:id="@+id/contenedorPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_pantalla">
            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_asegurado"
                android:textColor="@color/texto_principal"
                android:textSize="@dimen/titulo_size"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/imgAsegurado"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_normal"
                android:src="@drawable/ic_person"
                android:contentDescription="@string/titulo_asegurado" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitulo_tipo_persona"
                android:textSize="@dimen/subtitulo_size"
                android:textStyle="bold"
                android:textColor="@color/azul_principal" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_chico"
                android:layout_marginBottom="@dimen/margin_normal">
                <Button
                    android:id="@+id/btnPersonaFisica"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/persona_fisica"
                    tools:ignore="ButtonStyle" />
                <Button
                    android:id="@+id/btnPersonaJuridica"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/persona_juridica"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/contenedorDatosTipoPersona"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/margin_normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitulo_contacto"
                android:textSize="@dimen/subtitulo_size"
                android:textStyle="bold"
                android:textColor="@color/azul_principal" />
            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill" />
            <EditText
                android:id="@+id/inputTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_telefono"
                android:inputType="phone"
                tools:ignore="Autofill" />
            <LinearLayout
                android:id="@+id/contenedorTelefonos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
            <Button
                android:id="@+id/btnAgregarTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_agregar_telefono"
                android:layout_marginBottom="@dimen/margin_normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitulo_domicilio"
                android:textSize="@dimen/subtitulo_size"
                android:textStyle="bold"
                android:textColor="@color/azul_principal" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/inputCalle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/hint_calle"
                    android:inputType="textPostalAddress"
                    tools:ignore="Autofill" />
                <EditText
                    android:id="@+id/inputNumero"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_numero"
                    android:inputType="number"
                    tools:ignore="Autofill" />
            </LinearLayout>
            <EditText
                android:id="@+id/inputLocalidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_localidad"
                android:layout_marginBottom="@dimen/margin_normal"
                tools:ignore="Autofill,TextFields" />
            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_guardar" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
